--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.sticky_header_bottom {
+    background: linear-gradient(180deg, #fff, hsla(0, 0%, 100%, 0));
+    width: 100%;
+    height: 19px;
+}
