--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,23 @@
     width: 100%;
     height: 19px;
 }
+
+.radix-themes {
+    --default-font-family: -apple-system, BlinkMacSystemFont, Segoe UI,
+        Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji,
+        Segoe UI Symbol;
+}
+
+body,
+html {
+    font-family:
+        -apple-system,
+        BlinkMacSystemFont,
+        Segoe UI,
+        Helvetica,
+        Arial,
+        sans-serif,
+        Apple Color Emoji,
+        Segoe UI Emoji,
+        Segoe UI Symbol;
+}
