--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,21 +9,13 @@
 }
 
 .radix-themes {
-    --default-font-family: -apple-system, BlinkMacSystemFont, Segoe UI,
+    --default-font-family: Verdana, Geneva, sans-serif;
+    /* --default-font-family: -apple-system, BlinkMacSystemFont, Segoe UI,
         Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji,
-        Segoe UI Symbol;
+        Segoe UI Symbol; */
 }
 
 body,
 html {
-    font-family:
-        -apple-system,
-        BlinkMacSystemFont,
-        Segoe UI,
-        Helvetica,
-        Arial,
-        sans-serif,
-        Apple Color Emoji,
-        Segoe UI Emoji,
-        Segoe UI Symbol;
+    font-family: Verdana, Geneva, sans-serif;
 }
